# ImagingPlatform

./: .gitignore  README.md  calibration.py  config.toml  flip_img.py  post_process.py  pyproject.toml  requirements.txt
processing/: calib_params.pickle  calibration.py  calibration_pins.csv  flip_img.py  post_process.py  results.csv  results.pickle
silicone_calib/: calib_silicone.py  flexion_expe.csv  flexion_simu.csv
silicone_calib/sample_1/: extenso.csv  position.csv
silicone_calib/sample_2/: extenso.csv  position.csv
silicone_calib/sample_3/: extenso.csv  position.csv
src/post_tracking/: __init__.py  __main__.py  __version__.py  _config.py  _custom_scene.py  _plot.py  _post_frame.py  _structure.py  _tracking.py  _tracking_worker.py  user_interface.py
src/spot_tracking/: __init__.py  __main__.py  _config.py  _structure.py
